--- a/template.html
+++ b/template.html
@@ -60,17 +60,24 @@ $abstract$
 $endif$
 </header>
 $endif$
+<div style="display: flex">
 $if(toc)$
-<nav id="$idprefix$TOC" role="doc-toc">
+<div>
+<nav id="$idprefix$TOC" role="doc-toc" style="top:1rem; position: sticky;">
 $if(toc-title)$
 <h2 id="$idprefix$toc-title">$toc-title$</h2>
 $endif$
 $table-of-contents$
 </nav>
+</div>
 $endif$
+<div>
 $body$
+</div>
+
 $for(include-after)$
 $include-after$
 $endfor$
+</div>
 </body>
 </html>
